<resources>
    <string name="app_name">BrowsingAndCallingDemo</string>
    <string name="action_call">拨打电话</string>
    <string name="action_browse">浏览网页</string>

    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="number_star">*</string>
    <string name="number_sharp">#</string>

    <string name="action_clear">清除</string>

    <string name="action_start">开始</string>
</resources>
